--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "http://andreidimaano.github.io/v2",
   "name": "portfolio-v2",
   "version": "0.1.0",
   "private": false,
@@ -10,18 +9,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "elliptic": "^6.5.3",
-    "gh-pages": "^3.1.0",
-    "http-proxy": "^1.18.1",
-    "node-forge": "^0.10.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
-    "websocket-extensions": "^0.1.4"
+    "react-scripts": "3.4.3"
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
